fix: adjust font size for anchor tags to improve readability

--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ p {
 
 a {
   font-family: var(--body);
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   text-decoration: none;
   color: var(--primary-variant);
